--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,27 @@
+@font-face {
+  font-display: swap;
+  font-family: 'Merienda';
+  font-style: normal;
+  font-weight: 400;
+  src: url('./assets/fonts/merienda-v19-latin-regular.woff2') format('woff2'),
+       url('./assets/fonts/merienda-v19-latin-regular.woff') format('woff');
+}
+
+@font-face {
+  font-display: swap;
+  font-family: 'Merienda';
+  font-style: normal;
+  font-weight: 700;
+  src: url('./assets/fonts/merienda-v19-latin-700.woff2') format('woff2'),
+       url('./assets/fonts/merienda-v19-latin-700.woff') format('woff');
+}
+
 :root {
-  font-family: 'Merienda', 'Roboto', sans-serif;
+  font-family: 'Merienda', 'Roboto', sans-serif; /* Основний шрифт + резервний Roboto для кирилиці */
   line-height: 1.5;
   font-weight: 400;
   color: #333;
-  
+
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -29,6 +47,7 @@ img {
   height: auto;
 }
 
+/* Заголовки з Merienda жирним */
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Merienda', cursive;
   font-weight: 700;
