--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,5 +1,5 @@
 .footer {
-  padding: 30px 0;
+  padding: 45px 0 25px;
   background-color: #fff;
   display: flex;
   flex-direction: column;
@@ -44,4 +44,11 @@
 .footer__copyright {
   font-size: 14px;
   color: #777;
+}
+
+@media (max-width: 480px) {
+	.footer__nav-list {
+		flex-direction: column;
+		gap: 10px;
+	}
 }
