--- a/src/pages/OurCoffeePage/OurCoffeePage.css
+++ b/src/pages/OurCoffeePage/OurCoffeePage.css
@@ -4,7 +4,7 @@
 }
 
 .our-coffee-hero {
-  background-image: url('/images/our-coffee-bg.jpg');
+  background-image: url('/src/assets//images/');
   background-size: cover;
   background-position: center;
   height: 260px;
