refactor(styles): clear global.css

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,23 +1,1 @@
-.nav-link--logo {
-	position: relative;
-}
-
-.nav-link--logo::before {
-  content: '';
-  position: absolute;
-  width: 35px;
-  height: 35px;
-  background-image: url('/images/coffee-logo.svg');
-  background-size: contain;
-  background-repeat: no-repeat;
-  left: -33px; 
-  top: -22px;
-}
-
-.nav-link--logo-white::before {
-  filter: brightness(0) invert(1); /* Make white svg */
-}
-
-.nav-link--logo-black::before {
-  filter: brightness(0); /* Make black svg */
-}
+git
