--- a/src/pages/OurCoffeePage/OurCoffeePage.css
+++ b/src/pages/OurCoffeePage/OurCoffeePage.css
@@ -4,7 +4,7 @@
 }
 
 .our-coffee-hero {
-  background-image: url('/src/assets//images/');
+  /* background-image: url('/src/assets//images/'); */
   background-size: cover;
   background-position: center;
   height: 260px;
