--- a/src/components/layout/Header/Header.theme.css
+++ b/src/components/layout/Header/Header.theme.css
@@ -1,19 +1,28 @@
 .header--home {
-  background-image: url('@/assets/images/header-bg/house.jpg');
+  background-image: url("@/assets/images/header-bg/house.jpg");
   background-size: cover;
   background-position: center;
 }
 
 .header--coffee {
-  background-image: url('@/assets/images/header-bg/our.jpg');
+  background-image: url("@/assets/images/header-bg/our.jpg");
   background-size: cover;
   background-position: center;
-	max-height: 260px;
+  max-height: 260px;
 }
 
 .header--pleasure {
-  background-image: url('@/assets/images/header-bg/pleasure.jpg');
+  background-image: url("@/assets/images/header-bg/pleasure.jpg");
   background-size: cover;
   background-position: center;
-	max-height: 260px;
+  max-height: 260px;
+}
+
+.header--home nav {
+  margin-bottom: 111px;
+}
+
+.header--coffee nav,
+.header--pleasure nav {
+  margin-bottom: 60px;
 }
