--- a/src/components/layout/Header/Header.css
+++ b/src/components/layout/Header/Header.css
@@ -3,7 +3,7 @@
   background-size: cover;
   background-position: center;
   color: white;
-  padding: 63px 50px 200px;
+  padding: 48px 50px 190px;
   position: relative;
 }
 
@@ -18,19 +18,14 @@
   z-index: 0;
 } */
 
-.top {
-	max-width: 1140px;
-  display: flex;
-  align-items: center;
+.header__nav {
+	max-width: 1080px;
+  /* display: flex;
+  align-items: center; */
   z-index: 1;
   position: relative;
-  margin-bottom: 111px;
 	margin-left: auto;
   margin-right: auto;
-}
-
-.nav {
-  /* flex: 1; */
 }
 
 .nav__list {
