--- a/src/pages/OurCoffeePage/OurCoffeePage.css
+++ b/src/pages/OurCoffeePage/OurCoffeePage.css
@@ -44,13 +44,14 @@
 .about-beans-text p {
   line-height: 1.6;
   margin-bottom: 15px;
+	text-align: center;
 }
 
 .section-divider {
   width: 240px;
   margin: 0 auto;
   border: none;
-  border-top: 1px solid #d2b48c;
+  border-top: 1px solid #000;;
 }
 
 .coffee-filter-section {
