--- a/src/pages/ForYourPleasurePage/ForYourPleasurePage.css
+++ b/src/pages/ForYourPleasurePage/ForYourPleasurePage.css
@@ -45,7 +45,7 @@
   width: 240px;
   margin: 0 auto;
   border: none;
-  border-top: 1px solid #d2b48c;
+  border-top: 1px solid #000;
 }
 
 @media (max-width: 768px) {
