--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,6 @@
 :root {
 	--box-shadow-light: 4px 4px 20px 0 rgba(0, 0, 0, 0.25);
+	--box-shadow-card: 5px 5px 15px 0 rgba(0, 0, 0, 0.25);;
 }
 
 .section-divider {
@@ -7,4 +8,8 @@
   margin: 0 auto 60px;
   border: none;
   border-top: 1px solid #000;
+}
+
+.tac {
+	text-align: center;
 }
