--- a/src/pages/OurCoffeePage/OurCoffeePage.css
+++ b/src/pages/OurCoffeePage/OurCoffeePage.css
@@ -47,12 +47,18 @@
 	text-align: center;
 }
 
-.coffee-filter-section {
+/* .coffee-filter-section {
   padding: 30px 20px 0;
 }
 
 .coffee-list-section {
   padding: 0 20px 60px;
+} */
+
+.coffee-list {
+	max-width: 800px;
+	margin: 0 auto;
+	padding: 0 10px 15px;
 }
 
 @media (max-width: 768px) {
