feat(styles): add .section-divider-footer style in global.css

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,8 +4,15 @@
 }
 
 .section-divider {
-  width: 240px;
+  width: 250px;
   margin: 0 auto 60px;
+  border: none;
+  border-top: 1px solid #000;
+}
+
+.section-divider-footer {
+  width: 250px;
+  margin: 0 auto 45px;
   border: none;
   border-top: 1px solid #000;
 }
