--- a/src/components/CoffeeList/CoffeeList.css
+++ b/src/components/CoffeeList/CoffeeList.css
@@ -1,3 +1,9 @@
+.coffee-list {
+  max-width: 800px;
+  margin: 0 auto;
+  padding-bottom: 15px;
+}
+
 .coffee-list__items {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -8,6 +14,12 @@
   .coffee-list__items {
     gap: 30px;
   }
+
+  .search-filter {
+    /* margin: 0 auto 60px; */
+    gap: 30px;
+    flex-direction: column;
+  }
 }
 
 @media (max-width: 767.98px) {
@@ -15,5 +27,40 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 65px;
+  }
+}
+
+@media (max-width: 630px) {
+  .coffee-list__items {
+    gap: 30px;
+  }
+}
+
+@media (max-width: 484px) {
+  .coffee-list {
+    margin: 0 10%;
+  }
+
+  .coffee-list__items {
+    grid-template-columns: 1fr;
+    /* gap: 30px; */
+  }
+
+  .search-filter {
+    gap: 20px;
+		width: 100%;
+  }
+
+  .search-filter__region {
+    gap: 10px;
+    flex-direction: column;
+  }
+
+  .search-filter__query {
+    gap: 17px;
+  }
+
+  .search-filter__input {
+    padding: 6px 18px;
   }
 }
