--- a/src/pages/HomePage/AboutUs/AboutUs.css
+++ b/src/pages/HomePage/AboutUs/AboutUs.css
@@ -1,6 +1,7 @@
 .about-us {
-  padding: 40px 20px;
-  text-align: center;
+  padding: 80px 20px 100px;
+  max-width: 800px;
+  margin: 0 auto;
 }
 
 .about-us__title {
@@ -12,5 +13,7 @@
   max-width: 800px;
   margin: 0 auto;
   font-size: 16px;
+  line-height: 1.6;
+  text-align: center;
   line-height: 1.6;
 }
