--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,6 +3,13 @@
 	--box-shadow-card: 5px 5px 15px 0 rgba(0, 0, 0, 0.25);;
 }
 
+.section-title {
+  text-align: center;
+  font-size: 30px;
+  margin-bottom: 10px;
+}
+
+
 .section-divider {
   width: 250px;
   margin: 0 auto 60px;
